  if they aren't wanted they can be turned off with -N flag.
- added HTTPS and SVCB support (still in draft, standard hopefully in november 2022)
- added KX RR support (RFC 2230)
- added IPSECKEY RR support (RFC 4025)
- fixed delegation points according to RFC 4035 section 2.2 regarding NS RR's
  This was a long standing bug but noone noticed since we don't delegate much
  with delphinusdnsd.

[2021] Changes in RELEASE_1_6 from RELEASE_1_5

- rdomain support in OpenBSD
- fudgesize in forwarding mode for setting higher FUDGE value
- ntphack in main daemon for allowing *.ntp.org through
- setproctitle setting of an identifier for identifying a delphinusdnsd in
  systems that have multiple delphinusdnsd running
- change every instance of "master" to "primary"
- add a 10-query query cache (memoization) which speeds up subsequent answers
- ZONEMD RR's can now be added to a zone in both DNSSEC and non-DNSSEC zones.
  They can also be integrity checked with dddctl zonemd.
- RFC 9018/7873 Server DNS Cookies support, at first for OpenBSD only
- BIND & nsd by default dropped the question in the header on subsequent AXFR's
  (with the first envelope having it, after that no), adjust to this and add
  primary-axfr-old-behaviour and replicant-axfr-old-behaviour options to the
  global options in order to keep functionality of the old way, however this
  will not be documented in the manpages.  Also see -O switch in dddctl query
  in the source.
- reworked the CNAME code (we now reply to more RR's)
- added wildcarding for *.domain.tld domainnames (with DNSSEC support).
- fixed an endless loop in raxfr process when cortex process died
- added CDS/CDNSKEY support (RFC 8078 standard) this is rather an experimental
  addition since I can't use it with my tld's which are not listed here:
  https://github.com/oskar456/cds-updates/ and 
	https://www.internetsociety.org/deploy360/dnssec/maps/
  ... perhaps this standard will see more adoption in the future, and I can
  use it.